[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/DialogComponents/DialogWindowPanel.gd" type="Script" id=1]
[ext_resource path="res://Themes/DialogWindow.tres" type="Theme" id=2]

[node name="DialogWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -336.31 ]
}

[node name="DialogTexture" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Conversation" type="RichTextLabel" parent="DialogTexture"]
anchor_left = 0.05
anchor_top = 0.22
anchor_right = 0.95
anchor_bottom = 0.78
margin_left = -0.440002
margin_top = -0.0519981
margin_right = -0.440002
margin_bottom = -0.052002
bbcode_enabled = true
scroll_active = false

[node name="DialogBox" type="MarginContainer" parent="."]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Speaker" type="MarginContainer" parent="."]
anchor_right = 0.321
anchor_bottom = 0.132
margin_right = -0.0928192

[node name="SpeakerNameTexture" type="Panel" parent="Speaker"]
margin_right = 328.0
margin_bottom = 79.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="SpeakerName" type="Label" parent="Speaker/SpeakerNameTexture"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Player"
align = 1
valign = 1

[node name="TextDelayTimer" type="Timer" parent="."]

[node name="ChoiceBoxes" type="VBoxContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.276
anchor_right = 0.95
anchor_bottom = 0.95
margin_left = 0.159996
margin_top = -15.8
margin_right = 4.03992
margin_bottom = 29.0

[connection signal="timeout" from="TextDelayTimer" to="." method="_on_TextDelayTimer_timeout"]
